updated to use Java's LinkedList